          auto resume/pause if user code return promise
          Mobile (tested on Android) - users report that it don't work - need testing
          functions splitCommand, parseCommand, splitArguments, parseArguments changed
          to kebab case and those functions from now on throw exception with a message to
          use that other function
0.8.7     Fix processing command function
0.8.6     One space after fully completed command
0.8.5     All regex for formatting case insensitive
0.8.4     Fix redraw lines on import_view, fix calculating rows
0.8.3     Fix completion in nested interpreters, login option in push
          Remove pause/resume from login, Fix parsing RegExes
          Fix display text with more then limit lines in one echo
0.8.2     add Terminal::exception function
0.8.1     Fix login/logout
0.8.0     CTRL+L Clear terminal
          Shift+Enter insert newline
          Remove tabcompletion option (now completion can be true, array or function)
          Add onRPCError and exceptionHandler callbacks
          Interpreter can be an array
          ignoreSystemDescribe option
          Handle invalid JSON-RPC
          CSS style for standalone cmd plugin
          using CSS3 Animation for blinking if supported
          Fix [0m
          Better error handling (all messages are in $.terminal.defaults.strings)
          Named colors for terminal formatting
          expose settings and login function
          more tools in $.terminal
          paste kill text with CTRL+Y
          paste text from selection using middle mouse button
          Fix login, history and exec
          Disable few things when in login function
          All Strings are in $.terminal.defaults.strings
          more functions in $.terminal object
0.7.12    Fix terminal when start as invisible, rest property to parseCommand
0.7.11    Fix last history command
0.7.10    Fix reverse search
0.7.9     Don't show version when use source file